salesforce-main/src/main/default/objects/Application_wizard_employment__c/Application_wizard_employment__c.object-meta.xml
<CustomObject>
    <description>Employment data for the application</description>
    <label>Application wizard employment</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Application wizard employment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application wizard employments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>