salesforce-main/src/main/default/objects/Application_wizard_employment__c/fields/Application_wiz__c.field-meta.xml
<CustomField>
    <fullName>Application_wiz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application wiz</label>
    <referenceTo>Application_wizard__c</referenceTo>
    <relationshipLabel>Application wizard employments</relationshipLabel>
    <relationshipName>Application_wizard_employments</relationshipName>
    <type>Lookup</type>
</CustomField>