salesforce-main/src/main/default/objects/Application_wizard_employment__c/fields/iteration__c.field-meta.xml
<CustomField>
    <fullName>iteration__c</fullName>
    <label>iteration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>