salesforce-main/src/main/default/objects/Application_wizard_employment__c/fields/Name_of_employer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_employer__c</fullName>
    <label>Name of employer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>